<resources>
    <string name="app_name">Müzik Sayfası</string>
    <string name="bastex">bastex</string>
    <string name="basimg">basimg</string>
    <string name="basbut">basimg</string>
    <string name="basedit">basedit</string>
    <string name="bascard">bascard</string>
    <string name="getact">getact</string>
    <string name="getnote">getnote</string>
    <string name="artı">+</string>
    <string name="favorisarkilarim">Favori Şarkılarım</string>
    <string name="linearlayouttag">linearlayout</string>
    <string name="horizontalscrollviewtag">horizontalscrollview</string>
    <string name="profilolustur">Profil Oluştur</string>
    <string name="calismakistedigin">Çalışmak istediğin şarkıyı bul!</string>
    <string name="sanatcipinle">Sanatçı Pinle!</string>
    <string name="kitaplik">Kitaplık</string>
    <string name="favorilerim">Favorilerim</string>
    <string name="tumpdflerim">Tüm Pdf Dosyalarım</string>
    <string name="kesfet">Keşfet</string>
    <string name="oyunlar">Oyunlar</string>
    <string name="profilim"><u>Profilim</u></string>
    <string name="buradanara">Şarkıları Buradan Ara...</string>
    <string name="onecikanlar">Öne Çıkanlar</string>
    <string name="market"><u>Markete Gir</u></string>
    <string name="kolaypiyano">Kolay Piyano</string>
    <string name="tumsanatcilar">Tüm Sanatçılar</string>
    <string name="muzikligunler">Müzikli Günler...</string>
    <string name="proac1">Profil oluşturduğunda yaptığın değişiklikler kaydolur...</string>
    <string name="proac2">Seninle benzer zevklere sahip insanlarla tanış...</string>
    <string name="proac3">Sevdiğin sanatçıların şarkılarını favoriye al, elinin altında olsun...</string>
    <string name="proac4">Keyif aldığın şarkıların oyunlarıyla puan topla, arkadaşlarınla yarış...</string>
    <string name="proac5">Çalışma defteriyle notaları çalış, not al, kaydet...</string>
    <string name="arkadasedin">Arkadaşlar Edin</string>
    <string name="favoriyeal">Favoriye Al</string>
    <string name="oyunoyna">Oyun oyna</string>
    <string name="calismadefteri">Çalışma Defteri</string>
    <string name="poprogirisi">Profİl Gİrİşİ</string>
    <string name="poproac1">Sevdiğin Şarkıları Favorilerine Ekleyebilirsin...</string>
    <string name="poproac2">Müzik Sayfasında yeni şarkıları rahatça öğrenebilirsin...</string>
    <string name="poproac3">En sevdiğin şarkların oyunlarını oynayıp, skor tablosunda yarışabilirsin...</string>
    <string name="poproac4">İlgilendiğin sanatçıların şarkılarını takip edebilirsin...</string>
    <string name="poprolbas">Profİl Oluştur!</string>
    <string name="onolprobas">Önceden Oluşturduğun Profil mi var? O zaman...</string>
    <string name="girisbutik">Gİrİş Yap!</string>
    <string name="digersarklar">Diğer Şarkılar</string>
    <string name="tamekrans">Tam Ekran</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="linearsort">linearsort</string>
    <string name="notatag">notatag</string>
</resources>