<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/mainsanlayo"
    android:background="@drawable/transparentshape"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <ImageView
        android:layout_gravity="center"
        android:id="@+id/mainsanimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="@string/basimg"
        android:src="@drawable/ic_startall"
        android:background="@drawable/mslogobuy"/>
    <TextView
        android:padding="5dp"
        android:layout_gravity="center"
        android:id="@+id/mainsantex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:fontFamily="@font/raleway_medium"
        android:tag="@string/bastex"/>

</LinearLayout>