<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/sananalay"
    android:background="@drawable/gamebackgr_9"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="20"
        android:background="#CE000000">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:weightSum="20"
            android:orientation="horizontal">

            <TextView
                android:tag="@string/bastex"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="18.5"
                android:id="@+id/sanpopad"
                android:text="@string/app_name"
                android:gravity="center"
                android:fontFamily="@font/raleway_semibold"
                android:textColor="@color/white"
                android:textSize="25dp"/>

            <ImageView
                android:id="@+id/closesanpo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:src="@drawable/ic_close_x"/>

        </LinearLayout>


        <ImageView
            android:id="@+id/sanpopimg"
            android:tag="@string/basimg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:src="@drawable/mslogobuy"/>



        <SearchView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:iconifiedByDefault="false"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:queryHint="@string/app_name"
            android:id="@+id/popsearching"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12.5"
            tools:ignore="SpeakableTextPresentCheck">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sanpophoriclay"
                android:orientation="vertical">

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>