<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/girisana"
    android:padding="5dp"
    android:background="@drawable/gamebackgr_9"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#AD000000"
        android:weightSum="20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="20"
            android:layout_weight="2">

            <TextView
                android:id="@+id/basgirtex"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="18.5"
                android:text="@string/poprogirisi"
                android:gravity="center"
                android:textAllCaps="true"
                android:fontFamily="@font/luckiest_guy"
                android:textSize="30sp"
                android:textColor="@color/white"/>

            <ImageView
                android:id="@+id/closegiric"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:src="@drawable/ic_close_x"/>

        </LinearLayout>





        <HorizontalScrollView
            android:id="@+id/horgirpop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            tools:ignore="SpeakableTextPresentCheck">

            <LinearLayout
                android:padding="10dp"
                android:id="@+id/laygirhor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="@color/transparent"
                    android:layout_width="380dp"
                    android:padding="2dp"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:weightSum="20"
                        android:background="@drawable/transparentshape"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="13"
                            android:src="@drawable/ic_favfill_large"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="7"
                            android:gravity="center"
                            android:fontFamily="@font/raleway_medium_italic"
                            android:textSize="20sp"
                            android:text="@string/poproac1"
                            android:textColor="@color/white"/>


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true"
                    android:layout_width="380dp"
                    app:cardBackgroundColor="@color/transparent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:weightSum="20"
                        android:padding="5dp"
                        android:background="@drawable/transparentshape"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="13"
                            android:src="@drawable/ic_messageico"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="7"
                            android:gravity="center"
                            android:fontFamily="@font/raleway_medium_italic"
                            android:textSize="20sp"
                            android:text="@string/poproac2"
                            android:textColor="@color/white"/>


                    </LinearLayout>

                </androidx.cardview.widget.CardView>



                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true"
                    android:layout_width="380dp"
                    app:cardBackgroundColor="@color/transparent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:weightSum="20"
                        android:padding="5dp"
                        android:background="@drawable/transparentshape"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="13"
                            android:src="@drawable/ic_speedpuan"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="7"
                            android:gravity="center"
                            android:fontFamily="@font/raleway_medium_italic"
                            android:textSize="20sp"
                            android:text="@string/poproac3"
                            android:textColor="@color/white"/>


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true"
                    android:layout_width="380dp"
                    app:cardBackgroundColor="@color/transparent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:weightSum="20"
                        android:padding="5dp"
                        android:background="@drawable/transparentshape"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="13"
                            android:src="@drawable/ic_explore"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="7"
                            android:gravity="center"
                            android:fontFamily="@font/raleway_medium_italic"
                            android:textSize="20sp"
                            android:text="@string/poproac4"
                            android:textColor="@color/white"/>


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </HorizontalScrollView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4.5"
            app:cardBackgroundColor="@color/tema5"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/createproftex"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/transparentshape"
                android:fontFamily="@font/luckiest_guy"
                android:gravity="center"
                android:text="@string/poprolbas"
                android:textColor="@color/white"
                android:textSize="40sp" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/oncedenproftex"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/onolprobas"
            android:gravity="center"
            android:fontFamily="@font/raleway_medium_italic"
            android:textSize="15sp"
            android:textColor="@color/white"/>

        <androidx.cardview.widget.CardView
            app:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/tema4"
            app:cardCornerRadius="10dp"
            android:layout_weight="3.5">

            <TextView
                android:id="@+id/girisbuti"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/girisbutik"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:fontFamily="@font/luckiest_guy"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>




</LinearLayout>