<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/msarkibaklay"
    android:padding="2dp"
    android:orientation="vertical"
    tools:context=".msarkibak">

    <LinearLayout
        android:weightSum="20"
        android:background="#B0000000"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.50"
            android:weightSum="10"
            android:padding="3dp"
            android:orientation="horizontal">

            <HorizontalScrollView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                tools:ignore="SpeakableTextPresentCheck">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/sarkacbas">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/mslogobuy"
                        android:id="@+id/sanimggor"/>

                    <TextView
                        android:tag="@string/bastex"
                        android:id="@+id/sarkgiradi"
                        android:fontFamily="@font/raleway_medium"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/app_name"
                        android:gravity="center_vertical"
                        android:textColor="@color/white"
                        />


                </LinearLayout>

            </HorizontalScrollView>

            <ImageView
                android:id="@+id/mainsearch2"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_sharems"/>

            <ImageView
                android:id="@+id/favbar"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_favbuybos"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7">

            <com.google.android.youtube.player.YouTubePlayerView
                android:layout_width="match_parent"
                android:id="@+id/youtubeplayer"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <com.github.barteksc.pdfviewer.PDFView
            android:id="@+id/pdfViewer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"/>

            <LinearLayout
                android:id="@+id/sarbakhor"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1.9"
                android:weightSum="2"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="10"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/sanimgsark"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2.5"
                        android:src="@drawable/mslogobuy"/>

                    <TextView
                        android:tag="@string/bastex"
                        android:paddingLeft="5dp"
                        android:id="@+id/digersarklar"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7.5"
                        android:text="@string/digersarklar"
                        android:gravity="center_vertical"
                        android:fontFamily="@font/raleway_medium_italic"
                        android:textColor="@color/white"
                        android:textSize="18sp"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="10"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/tamekranimg"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2.5"
                        android:src="@drawable/ic_zoombuy"/>

                    <TextView
                        android:tag="@string/bastex"
                        android:paddingLeft="5dp"
                        android:id="@+id/tamekrantext"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7.5"
                        android:text="@string/tamekrans"
                        android:gravity="center_vertical"
                        android:fontFamily="@font/raleway_medium_italic"
                        android:textColor="@color/white"
                        android:textSize="18sp"/>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="10"
                    android:layout_weight="1">

                </LinearLayout>




            </LinearLayout>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.6"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-2627695336411451/9221480406">
        </com.google.android.gms.ads.AdView>


    </LinearLayout>

</LinearLayout>